corpus/directive.txt
==================
Open Directive
==================

2014-02-03 open Assets:US:BofA:Checking

---

(source_file
  (date)
  (open_definition
    (account)))

==================
Open with Commodity Directive
==================

2014-05-01 open Liabilities:CreditCard:CapitalTwo     USD

---

(source_file
  (date)
  (open_definition
    (account)
    (commodity)))

==================
Open with two Commodities Directive
==================

2014-05-01 open Liabilities:CreditCard:CapitalTwo     USD,CNY

---

(source_file
  (date)
  (open_definition
    (account)
    (commodity)
    (commodity)))

==================
Close Directive
==================

2016-11-28 close Liabilities:CreditCard:CapitalOne

---

(source_file
  (date)
  (close_definition
    (account)))

==================
Commodity Directive
==================

1867-07-01 commodity CAD

---

(source_file
  (date)
  (commodity_definition
    (commodity)))

==================
Note Directive
==================

2014-04-10 note Assets:US:BofA:Checking "Called to confirm wire transfer"

---

(source_file
  (date)
  (note_definition
    (account)
    (note)))

==================
Document Directive
==================

2014-11-03 document Liabilities:CreditCard:CapitalTwo "/home/joe/stmts/apr-2014.pdf"

---

(source_file
  (date)
  (document_definition
    (account)
    (filepath)))

==================
Event Directive
==================

2014-07-09 event "location" "Paris, France"

---

(source_file
  (date)
  (event_definition
    (text)
    (text)))

==================
Balance Directive
==================

2014-05-02 balance Assets:US:BofA:Checking 154.20 USD

---

(source_file
  (date)
  (balance_definition
    (account)
    (amount)
    (commodity)))

==================
Pad Directive
==================

2014-05-02 pad Assets:US:BofA:Checking Equity:Opening-Balances

---

(source_file
  (date)
  (pad_definition
    (account)
    (account)))

==================
Price Directive
==================

2014-07-09 price USD 1.08 CAD

---

(source_file
  (date)
  (price_definition
    (commodity)
    (amount)
    (commodity)))
