corpus/misc.txt
==================
Inline Comments
==================

2014-05-05 * "Cafe Mogador" "Narration" ; comment line 1
  Assets:US:BofA:Checking         100 USD ; comment line 2
  Assets:Cash                    -100 USD ; comment line 3

---

(source_file
  (date)
  (transaction_definition
    (txn)
    (payee)
    (narration)
    (comment)
    (post_definition
      (account)
      (amount)
      (commodity))
    (comment)
    (post_definition
      (account)
      (amount)
      (commodity)))
    (comment))

==================
Standalone comments
==================

; comment line 1
;; comment line 2
2014-05-05 * "Cafe Mogador" "Narration"
  Assets:US:BofA:Checking         100 USD
  Assets:Cash                    -100 USD

---

(source_file
  (comment)
  (comment)
  (date)
  (transaction_definition
    (txn)
    (payee)
    (narration)
    (post_definition
      (account)
      (amount)
      (commodity))
    (post_definition
      (account)
      (amount)
      (commodity))))
